--- a/C/DOC/CS/COURSES/SOLOLEARN/01/0101/0101.MD
+++ b/C/DOC/CS/COURSES/SOLOLEARN/01/0101/0101.MD
@@ -1,6 +1,15 @@
 
 ---
 
+###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Computer Programming](https://github.com/ttltrk/PRG/blob/master/C/DOC/CP/CP.MD) - [C#](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/CS.MD) - [courses](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/COURSES/COURSES.MD) - [SoloLearn - C#](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/COURSES/SOLOLEARN/SOLOLEARN.MD) - [Basic Concepts](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/COURSES/SOLOLEARN/01/01.MD)
+
+---
+
 ### 01.01 - What is C#?
+
+---
+
+* [01.01.01 - Welcome to C#](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/COURSES/SOLOLEARN/01/0101/010101/010101.MD)
+* [01.01.02 - The .NET Framework](https://github.com/ttltrk/PRG/blob/master/C/DOC/CS/COURSES/SOLOLEARN/01/0101/010102/010102.MD)
 
 ---
