--- a/JAVA/DOC/SL/01/0108/0108.MD
+++ b/JAVA/DOC/SL/01/0108/0108.MD
@@ -9,57 +9,6 @@
 
 ---
 
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
-
----
-
-```java
-
->>>
-
->>>
-```
-
-* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+* [01.08.01 - Getting User Input](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/SL/01/0108/010801/010801.MD)
 
 ---
