--- a/JAVA/DOC/SL/02/0201/020101/020101.MD
+++ b/JAVA/DOC/SL/02/0201/020101/020101.MD
@@ -8,3 +8,55 @@
 ### 02.01.01 - Decision Making
 
 ---
+
+```
+Conditional statements are used to perform different actions based on different conditions. 
+The if statement is one of the most frequently used conditional statements.
+If the if statement's condition expression evaluates to true, the block of code 
+inside the if statement is executed. If the expression is found to be false, 
+the first set of code after the end of the if statement (after the closing curly brace) is executed.
+```
+
+```java
+if (condition) {
+   //Executes when the condition is true
+}
+```
+
+---
+
+```java
+Any of the following comparison operators may be used to form the condition:
+
+< less than
+> greater than
+!= not equal to
+== equal to
+<= less than or equal to
+>= greater than or equal to
+```
+
+```java
+public class HelloWorld{
+    public static void main(String []args){
+         
+        int x = 7;
+        
+        if(x < 42) 
+          {
+          System.out.println("Hi");
+          }
+     }
+}
+
+>>>
+Hi
+>>>
+```
+
+```
+Remember that you need to use two equal signs (==) to test for equality, 
+since a single equal sign is the assignment operator.
+```
+
+---
