--- a/JAVA/DOC/SL/02/0201/020102/020102.MD
+++ b/JAVA/DOC/SL/02/0201/020102/020102.MD
@@ -8,3 +8,34 @@
 ### 02.01.02 - if...else Statements
 
 ---
+
+```
+An if statement can be followed by an optional else statement, 
+which executes when the condition evaluates to false. 
+```
+
+```java
+public class soloFOKINlearn{
+    public static void main(String []args){
+         
+        int age = 30;
+
+        if (age < 16) 
+          {
+          System.out.println("Too Young");
+          } 
+        else 
+          { 
+          System.out.println("Welcome!");
+          }
+     }
+}
+
+>>>
+Welcome!
+>>>
+```
+
+* [J IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
