--- a/PY/DOC/OPYM/13/06/10P/10P.MD
+++ b/PY/DOC/OPYM/13/06/10P/10P.MD
@@ -5,6 +5,34 @@
 
 ---
 
+```python
+address = ["Flat Floor Street", "18", "NYC"]
+pins = {"Mike":1234, "Joe":1111, "Jack":2222}
+
+print(address[0], address[1], address[2])
+pin = int(input("Enter your pin: "))
+
+def find_in_file(f):
+    myfile = open("sample.txt")
+    fruits = myfile.read()
+    fruits = fruits.splitlines()
+    if f in fruits:
+        return "That fruit is in the list!"
+    else:
+        return "No such fruit found!"
+
+if pin in pins.values():
+    fruit = input("Enter fruit: ")
+    print(find_in_file(fruit))
+else:
+    print("Incorrect pin!")
+    print("This info can be accessed only by: ")
+    for key in pins.keys():
+        print(key)
+```
+
+---
+
 * [01 - ]()
 * [02 - ]()
 * [03 - ]()
