--- a/PY/DOC/OPYM/13/06/10P/10P.MD
+++ b/PY/DOC/OPYM/13/06/10P/10P.MD
@@ -37,15 +37,15 @@ else:
 * [02 - ]()
 * [03 - ]()
 * [04 - ]()
-* [05 - ]()
-* [06 - ]()
-* [07 - ]()
-* [08 - ]()
-* [09 - ]()
-* [10 - ]()
-* [11 - ]()
-* [12 - ]()
-* [13 - ]()
+* [05 - Application 1: Build an Interactive Dictionary]()
+* [06 - Data Analysis with Pandas]()
+* [07 - Numpy]()
+* [08 - Application 2: Create Webmaps with Python and Folium]()
+* [09 - Application 3: Build a Website Blocker]()
+* [10 - Application 4: Build a Website with Python and Flask]()
+* [11 - Graphical User Interfaces with Tkinter]()
+* [12 - Python for Interacting with SQLite and PostgreSQL Databases]()
+* [13 - Application 5: Build a Desktop Database Application]()
 * [14 - ]()
 * [15 - ]()
 * [16 - ]()
