--- a/PY/DOC/PYORG/03/03.MD
+++ b/PY/DOC/PYORG/03/03.MD
@@ -7,6 +7,13 @@
 
 ---
 
-### 03 - 
+### 03 - An Informal Introduction to Python
+
+---
+
+* [03.01 - Numbers](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/03/0301/0301.MD)
+* [03.02 - Strings](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/03/0302/0302.MD))
+* [03.03 - Lists](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/03/0303/0303.MD))
+* [03.04 - First Steps Towards Programming](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/03/0304/0304.MD))
 
 ---
