--- a/PY/DOC/PYORG/03/0304/0304.MD
+++ b/PY/DOC/PYORG/03/0304/0304.MD
@@ -1,6 +1,12 @@
 
 ---
 
+###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [most used manuals](https://github.com/ttltrk/PRG/blob/master/MUM.MD)
+
+###### [改善](https://github.com/ttltrk/0C/blob/master/README.MD) - [.co.](https://github.com/ttltrk/PRG/blob/master/CODING.MD) - [manuals](https://github.com/ttltrk/PRG/blob/master/MAN.MD) - [basic manuals](https://github.com/ttltrk/PRG/blob/master/MANUALS.MD) - [Scripts](https://github.com/ttltrk/PRG/blob/master/PY/DOC/SC/SC.MD) - [Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PY/PY.MD) - [own manuals](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PY/MAN/MAN.MD) - [PYORG](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/PYORG.MD) - [Intro to Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYORG/03/03.MD)
+
+---
+
 ### 03.04 - 
 
 ---
