--- a/PY/DOC/PYORG/03/0301/0301.MD
+++ b/PY/DOC/PYORG/03/0301/0301.MD
@@ -10,3 +10,92 @@
 ### 03.01 - Numbers
 
 ---
+
+```python
+a = 2+2
+b = 50 - 5*6
+c = (50 - 5*6) / 4
+d = 8/5
+
+print(a)
+print(b)
+print(c)
+print(d)
+
+>>>
+4
+20
+5.0
+1.6
+>>>
+```
+
+---
+
+```python
+a = 17 / 3
+b = 17 // 3
+c = 17 % 3
+d = 5 * 3 + 2
+
+print(a)
+print(b)
+print(c)
+print(d)
+
+>>>
+5.666666666666667
+5
+2
+17
+>>>
+```
+
+---
+
+```python
+a = 5 ** 2
+b = 3 ** 3
+c = 2 ** 7
+
+
+print(a)
+print(b)
+print(c)
+
+>>>
+25
+27
+128
+>>>
+```
+
+---
+
+```python
+width = 20
+height = 5 * 9
+
+res = width * height
+
+print(res)
+
+>>>
+900
+>>>
+```
+
+---
+
+```python
+res = 4 * 3.75 - 1
+
+print(res)
+
+>>>
+14.0
+>>>
+```
+
+---
+
