--- a/PY/DOC/PYORG/03/0302/0302.MD
+++ b/PY/DOC/PYORG/03/0302/0302.MD
@@ -10,3 +10,111 @@
 ### 03.02 - Strings
 
 ---
+
+```python
+a = 'spam eggs'  
+b = 'doesn\'t'  
+c = "doesn't"
+d = '"Yes," they said.'
+e = "\"Yes,\" they said."
+f = '"Isn\'t," they said.'
+
+print(a)
+print(b)
+print(c)
+print(d)
+print(e)
+print(f)
+
+>>>
+spam eggs
+doesn't
+doesn't
+"Yes," they said.
+"Yes," they said.
+"Isn't," they said.
+>>>
+```
+
+---
+
+```python
+a = '"Isn\'t," they said.' 
+b = 'First line.\nSecond line.' 
+
+print(a)
+print(b)
+
+>>>
+"Isn't," they said.
+First line.
+Second line.
+>>>
+```
+
+---
+
+```python
+print("""\
+Usage: thingy [OPTIONS]
+     -h                        Display this usage message
+     -H hostname               Hostname to connect to
+""")
+
+>>>
+Usage: thingy [OPTIONS]
+     -h                        Display this usage message
+     -H hostname               Hostname to connect to
+>>>
+```
+
+---
+
+```python
+print(3 * 'un' + 'ium')
+print('Py' 'thon')
+
+>>>
+unununium
+Python
+>>>
+```
+
+---
+
+```
+ +---+---+---+---+---+---+
+ | P | y | t | h | o | n |
+ +---+---+---+---+---+---+
+ 0   1   2   3   4   5   6
+-6  -5  -4  -3  -2  -1
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
+
+```python
+
+>>>
+
+>>>
+```
+
+---
