--- a/PY/DOC/PYORG/03/0302/0302.MD
+++ b/PY/DOC/PYORG/03/0302/0302.MD
@@ -86,16 +86,41 @@ Python
  +---+---+---+---+---+---+
  | P | y | t | h | o | n |
  +---+---+---+---+---+---+
- 0   1   2   3   4   5   6
--6  -5  -4  -3  -2  -1
+   0   1   2   3   4   5   
+  -6  -5  -4  -3  -2  -1
 ```
 
----
-
 ```python
+lst = ['P', 'Y', 'T', 'H', 'O', 'N']
+
+print(lst[0])
+print(lst[1])
+print(lst[2])
+print(lst[3])
+print(lst[4])
+print(lst[5])
+print('   ')
+print(lst[-6])
+print(lst[-5])
+print(lst[-4])
+print(lst[-3])
+print(lst[-2])
+print(lst[-1])
 
 >>>
-
+P
+Y
+T
+H
+O
+N
+   
+P
+Y
+T
+H
+O
+N
 >>>
 ```
 
