--- a/PY/DOC/PYORG/03/0302/0302.MD
+++ b/PY/DOC/PYORG/03/0302/0302.MD
@@ -91,21 +91,21 @@ Python
 ```
 
 ```python
-lst = ['P', 'Y', 'T', 'H', 'O', 'N']
+p = 'PYTHON'
 
-print(lst[0])
-print(lst[1])
-print(lst[2])
-print(lst[3])
-print(lst[4])
-print(lst[5])
+print(p[0])
+print(p[1])
+print(p[2])
+print(p[3])
+print(p[4])
+print(p[5])
 print('   ')
-print(lst[-6])
-print(lst[-5])
-print(lst[-4])
-print(lst[-3])
-print(lst[-2])
-print(lst[-1])
+print(p[-6])
+print(p[-5])
+print(p[-4])
+print(p[-3])
+print(p[-2])
+print(p[-1])
 
 >>>
 P
@@ -127,19 +127,44 @@ N
 ---
 
 ```python
+p = 'PYTHON'
+
+print("0:1 = " + p[0:1])
+print("0:2 = " + p[0:2])
+print("0:3 = " + p[0:3])
+print("0:4 = " + p[0:4])
+print("0:5 = " + p[0:5])
+print("0:6 = " + p[0:6])
+print('  ')
+print("0:-1 = " + p[0:-1])
+print("0:-2 = " + p[0:-2])
+print("0:-3 = " + p[0:-3])
+print("0:-4 = " + p[0:-4])
+print("0:-5 = " + p[0:-5])
+print("0:-6 = " + p[0:-6])
+print('  ')
+print("2:4 = " + p[2:4])
+print("3:5 = " + p[3:5])
 
 >>>
-
+0:1 = P
+0:2 = PY
+0:3 = PYT
+0:4 = PYTH
+0:5 = PYTHO
+0:6 = PYTHON
+  
+0:-1 = PYTHO
+0:-2 = PYTH
+0:-3 = PYT
+0:-4 = PY
+0:-5 = P
+0:-6 = 
+  
+2:4 = TH
+3:5 = HO
 >>>
 ```
 
 ---
 
-```python
-
->>>
-
->>>
-```
-
----
