--- a/JAVA/DOC/BJM/TOMI/06/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/06/07/07.MD
@@ -18,7 +18,36 @@ Implementáljon egy függvényt, ami betűnként végigiterál egy String-en é
 Java Solution
 
 ```java
+public class HelloWorld{
 
+     public static void main(String []args){
+         
+        String s = "programozzteis";
+        
+        for (int i = 0; i < s.length(); i++) {
+            System.out.println(s.charAt(i));
+            
+        }
+
+     }
+}
+
+>>>
+p
+r
+o
+g
+r
+a
+m
+o
+z
+z
+t
+e
+i
+s
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
