--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -20,7 +20,7 @@ HO examples
 * [01 - for kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/01/01.MD)
 * [02 - while, do_while kiiratas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/02/02.MD)
 * [03 - user input](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/03/03.MD)
-* [04](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/04/04.MD)
+* [04 - 3 param](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/04/04.MD)
 * [05 - infinity cycle](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/05/05.MD)
 * [06 - modulo](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/06/06.MD)
 * [07 - ** iteralas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD)
