--- a/JAVA/DOC/BJM/TOMI/06/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/06/08/08.MD
@@ -19,7 +19,25 @@ visszatérési értéke adja meg, hogy tartalmazza-e vagy sem
 Java Solution
 
 ```java
+public class HelloWorld{
 
+     public static void main(String []args){
+         
+        String strOrig = "Hello readers";
+        int intIndex = strOrig.indexOf("Hello");
+      
+        if(intIndex == - 1) {
+          System.out.println("Hello not found");
+        } else {
+          System.out.println("Found Hello at index " + intIndex);
+        }
+         
+     }
+}
+
+>>>
+Found Hello at index 0
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
