--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -24,7 +24,7 @@ HO examples
 * [05 - infinity cycle](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/05/05.MD)
 * [06 - modulo](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/06/06.MD)
 * [07 - ** iteralas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD)
-* [08](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
+* [08 - ** string in string](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
 * [09 - replace](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD)
 * [10](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD)
 * [11](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/11/11.MD)
