--- a/JAVA/DOC/BJM/TOMI/06/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/06/10/10.MD
@@ -19,7 +19,31 @@ X elemébe. Írassa ki az eredményt!
 Java Solution
 
 ```java
+public class Test {
+    
+    public static boolean contains(int[] arr, int item) {
+      for (int n : arr) {
+         if (item == n) {
+            return true;
+         }
+      }
+      return false;
+    }
+    
+    public static void main(String[] args) {
+      int[] myArray = { 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144 };
+      System.out.println(contains(myArray, 1));
+      System.out.println(contains(myArray, 13));
+      System.out.println(contains(myArray, 25));
+      
+    }
+}
 
+>>>
+true
+true
+false
+>>>
 ```
 
 * [J IDE](https://www.tutorialspoint.com/compile_java_online.php) 
