--- a/JAVA/DOC/BJM/TOMI/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/06/06.MD
@@ -26,7 +26,7 @@ HO examples
 * [07 - ** iteralas](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/07/07.MD)
 * [08 - ** string in string](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/08/08.MD)
 * [09 - replace](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/09/09.MD)
-* [10](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD)
+* [10 - ** int in arr](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/10/10.MD)
 * [11](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/11/11.MD)
 * [12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/12/12.MD)
 * [13](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/06/13/13.MD)
